--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "quill": "^1.3.7",
     "vue": "^2.5.2",
     "vue-quill-editor": "^3.0.6",
+    "vue-quill-editor-upload": "^1.1.0",
     "vue-router": "^3.0.1",
     "vue2-editor": "^2.10.2",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -45,6 +47,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "quill-image-extend-module": "^1.1.2",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
@@ -66,5 +69,15 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "main": ".postcssrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zhu118110/vueProject.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zhu118110/vueProject/issues"
+  },
+  "homepage": "https://github.com/zhu118110/vueProject#readme"
 }
