--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-polyfill": "^6.26.0",
     "echarts": "^4.6.0",
     "element-ui": "^2.13.0",
     "highlight.js": "^9.17.1",
